# stac-keypoints-web

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  stac_retarget_config_final.yaml  stac_retarget_config_final_v2.yaml  stac_retarget_config_v1.yaml  stac_retarget_config_wip.yaml  start.sh
.github/workflows/: ci.yml  deploy.yml
backend/: acm_processing.py  alignment.py  app.py  config_io.py  frame_selector.py  keypoints_io.py  mujoco_utils.py  stac_runner.py
data/: demo_with_nan.h5  stac_rodent_acm.yaml
data/sample_trial/: motiondata.mat
docs/: deploy.md  developer-guide.md  known-issues.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/data/: stac_config.json
frontend/public/data/fly/: fruitfly_force.xml  stac_config.json
frontend/public/data/mouse/: mouse_with_meshes.xml  stac_config.json
frontend/public/data/rat/: acm_keypoints.json  rodent_relaxed.xml
frontend/public/data/stick/: stac_config.json  sungaya_inexpectata_box.xml
frontend/public/data/worm/: celegans.xml  stac_config.json
frontend/src/: App.tsx  alignment.ts  api.backend.ts  api.ts  errorColor.ts  exportConfig.ts  h5KeypointsLoader.ts  ikRunner.ts  localApi.ts  mujocoLoader.ts  mujocoWasm.ts  preprocessMeshfulXml.ts  procrustes.ts  qualityReport.ts  sceneScale.ts  skeletonEditor.ts  statusTone.ts  store.ts  types.ts  validation.ts  yamlConfig.ts
frontend/src/__tests__/: apiBase.test.ts  autoIkQueue.test.ts  h5KeypointsLoader.test.ts  mujocoLoader.test.ts  preprocessMeshfulXml.test.ts  procrustes.test.ts  qualityReport.test.ts  statusTone.test.ts  storeInvalidation.test.ts  yamlConfig.test.ts
frontend/src/components/: ACMSkeleton.tsx  BackendControls.tsx  ErrorDistribution.tsx  ErrorLines.tsx  FitCameraOnLoad.tsx  FollowCamera.tsx  GapHeatmap.tsx  HelpOverlay.tsx  HoverTooltip.tsx  MappingTable.tsx  ModelGizmo.tsx  MuJoCoModel.tsx  OffsetGizmo.tsx  OffsetMarkers.tsx  PropertiesPanel.tsx  RegionErrorSummary.tsx  Timeline.tsx  Toolbar.tsx  ToolbarMenu.tsx  Viewport3D.tsx
frontend/src/hooks/: useAutoAlign.ts  useAutoIk.ts  useCameraControls.ts  useKeyboardShortcuts.ts
scripts/: make_nan_test_h5.py  precompute_assets.py  precompute_species.py  preprocess_meshful_xml.py
tests/: test_acm_processing.py  test_alignment.py  test_app.py  test_app_nan_e2e.py  test_config_io.py  test_cors_config.py  test_keypoints_io.py  test_mujoco_utils.py  test_stac_runner.py
