[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-keypoints-web"
version = "0.1.0"
description = "Interactive web UI for ACM→MuJoCo skeleton retargeting"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "mujoco>=3.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.25", "anyio>=4.0", "pytest-anyio>=0.0.0"]

[tool.setuptools.packages.find]
include = ["backend*"]
