[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-keypoints-web"
version = "0.1.0"
description = "Interactive web UI for ACM→MuJoCo skeleton retargeting"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "mujoco>=3.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.25", "anyio>=4.0", "pytest-anyio>=0.0.0"]
# Backend IK preview only: backend/stac_runner.py delegates per-frame pose
# optimization to stac_mjx.StacCore.q_opt. stac-mjx is NOT on PyPI, so it is
# intentionally not a base dependency (it would break `pip install` and CI).
# Install it from a checkout/git to enable backend IK, e.g.
#   pip install -e ../stac-mjx
#   pip install "stac-mjx @ git+https://github.com/talmolab/stac-mjx.git"
# Standalone / pure-frontend mode runs entirely in the browser (mujocoWasm.ts)
# and never imports it; stac_runner defers the import and tests importorskip it.
backend-ik = ["stac-mjx>=0.0.1"]

[tool.setuptools.packages.find]
include = ["backend*"]
